[package]
name = "lohr"
version = "0.4.4"
authors = ["Antoine Martin <antoine@alarsyo.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
description = "A Git mirroring daemon"
homepage = "https://github.com/alarsyo/lohr"
repository = "https://github.com/alarsyo/lohr"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
hex = "0.4.3"
hmac = "0.10.1"
log = "0.4.14"
regex = "1"
serde = { version = "1.0.125", features = [ "derive" ] }
serde_json = "1.0.64"
serde_regex = "1.1.0"
serde_yaml = "0.8.17"
sha2 = "0.9.3"

[dependencies.rocket]
version = "0.5.0"
# don't need private-cookies
default-features = false

[dependencies.clap]
version = "2.33.3"
# no need for suggestions or color with only one argument
default-features = false
